--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0",
     "webpack": "^3.0.0"
   }
 }
