--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^4.10.7",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
