--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Search NYT articles and save to read later",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "repository": {
