--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "request": "^2.81.0",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
