--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "chalk": "^2.0.1",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "mongoose": "^4.10.7",
